create allUser hook and add infinite hook

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,7 +7,10 @@
             ],
             "@interfaces/*": [
                 "./src/types/*"
-            ]
+            ],
+            "@hooks/*": [
+                "./src/hooks/*"
+            ],
         }
     }
 }
