--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.25.0",
+    "bootstrap": "5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-hook": "^4.0.2",
     "react-router-dom": "^6.2.1",
