--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "NODE_ENV=development react-app-rewired start ",
+    "build": "NODE_ENV=development react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
