add redux and change types folders

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,6 +11,9 @@
             "@hooks/*": [
                 "./src/hooks/*"
             ],
+            "@redux/*": [
+                "./src/redux/*"
+            ],
         }
     }
 }
