--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
-    "axios": "^0.25.0",
+    "@types/react-redux": "^7.1.22",
     "bootstrap": "5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-hook": "^4.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "redux": "^4.1.2",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "NODE_ENV=development react-app-rewired start ",
