move hook data to redux

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,11 +5,11 @@
             "@components/*": [
                 "./src/components/*"
             ],
-            "@interfaces/*": [
-                "./src/types/*"
-            ],
             "@hooks/*": [
                 "./src/hooks/*"
+            ],
+            "@interfaces/*": [
+                "./src/interfaces/*"
             ],
             "@redux/*": [
                 "./src/redux/*"
