--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "get-repo",
+  "homepage": "https://leave3310.github.io/get-repo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,12 +9,14 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/babel__core": "^7.1.18",
+    "@types/gh-pages": "^3.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.22",
     "bootstrap": "5.1.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -28,7 +31,9 @@
     "start": "NODE_ENV=development react-app-rewired start ",
     "build": "NODE_ENV=development react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
