--- a/package.json
+++ b/package.json
@@ -4,17 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.16.12",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/babel__core": "^7.1.18",
-    "@types/gh-pages": "^3.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.22",
     "bootstrap": "5.1.3",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
@@ -60,6 +49,17 @@
     "src"
   ],
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/babel__core": "^7.1.18",
+    "@types/gh-pages": "^3.2.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "react-app-rewired": "^2.1.11"
   }
 }
